# game-watcher

./: .gitignore  BETTING_ODDS_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY_SUMMARY.md  app.py  config.env  config.example.txt  conftest.py  coverage.xml  main.py  package.json  pyproject.toml  requirements.txt  test_app.py  tsconfig.json  web_server.py
.devcontainer/: devcontainer.json  setup.sh
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
anvil_app/: README.md  background_tasks.py  collector_utils.py  requirements.txt  server_module.py
api/: __init__.py  app.py  client.py  frontend.py  models.py  routes.py  services.py
api/templates/: admin.html  betting_odds_component.html  calendar.html  day.html
collectors/: __init__.py
collectors/betting/: __init__.py  collector.py
collectors/boxing/: __init__.py  collector.py
collectors/f1/: __init__.py  collector.py
collectors/futbol/: __init__.py  collector.py
collectors/mma/: __init__.py  collector.py
collectors/nba/: __init__.py  collector.py
collectors/nfl/: __init__.py  collector.py
docs/: API_ARCHITECTURE.md  ARCHITECTURE.md  BACKEND_API.md  BETTING_ODDS_GUIDE.md  DEPLOYMENT.md  FEATURES_SUMMARY.md  FRONTEND.md  IMPLEMENTATION_COMPLETE.md  README.md  REFACTORING_SUMMARY.md  WEBHOOK_GUIDE.md
scripts/: mcp-diagnostic.sh
tests/: test_betting_odds.py  test_futbol.py
utils/: __init__.py  base_collector.py  betting_scheduler.py  calendar_sync.py  database.py  event_schema.py  logger.py  monitoring.py  webhook.py
